# 4thYearAssignments

cos3701/assign_1/: Assign_1.docx
cos3711/Additional Resources-20240626/Videos - Other topics/: PolymorphismPolymorphicAssignment.ppsx  QtsChildManagementFacility.ppsx  SignalsSlots.ppsx  StackHeapMemory.ppsx
cos3711/assignment_1/Finished zip/: Tabish_Khaqan_67737900_Assignment 1_COS3711.rar
cos3711/assignment_2/working/cos3711_assign2_working/: CMakeLists.txt  main.cpp
cos3711/assignment_3/: Q1_answers.docx
cos3711/assignment_3/Final submission/: Tabish_Assignment_3_cos3711_67737900.rar
cos3711/assignment_3/Q1/: CMakeLists.txt  book.cpp  book.h  bookwriter.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
cos3711/assignment_3/Q2/: CMakeLists.txt  book.cpp  book.h  bookwriter.cpp  bookwriter.h  mainwindow.cpp  mainwindow.ui
cos3711/assignment_3/Q3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
cos3721/Assign_3/: Tabish_67737900_cos3721_Assignment_3.docx  Tabish_cos3721_67737900_Assignment_3.txt
cos3721/Assignment_1/: Tabish_cos3721_Assignment_1.txt
cos3761/: assignment1.txt
cos3761/Assign_1/: assignment1.txt
cos3761/Assign_2/: Assign_2.docx  New Text Document.txt
inf3703/assign_2/: ASS2_ADMIN_PDB_67737900.sql  Assign2.docx  Assign2_update.docx  Q4-2-Insert-into-TMSC-67737900.sql  Q4-2-TMSC-table-67737900.sql  Q4-3-ALTER-HOM-67737900.sql
inf3705/Assign_1/: Assignment_1.docx
inf3707/Assignment_1/: inf3707_assign_1.docx
inf3708/: Final Mark Calculator.xlsx
inf3708/Assign_3/: Tabish_67737900_inf3708_assign_3.docx
(+358 files in other folders)
